# algebra-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
app/: helloworld.cxx
demo/: functor-applicative-monad-demo.cxx  hello-algebra.cxx  list-demo.cxx  monoid-demo.cxx  stl_container-demo.cxx  string-demo.cxx
include/: algebra.h  algebra.hpp
include/algebra/: prelude.hpp
include/algebra/basic/: type_concepts.hpp  type_operation.hh  type_operation.hpp  type_reflection.hpp
include/algebra/control/: applicative.hpp  functor.hpp  monad.hh  monad.hpp
include/algebra/data/: functor.hpp  list.hpp  monoid.hpp  stl_container.hpp  string.hpp
include/basic/: type_concepts.h
include/core/: basic.h
test/: algebra-test.cxx  algebra_reporter.h  ftl_reporter.h  helloworld_test.cpp  helloworld_test.cxx  list-test.cxx  monoid-test.cxx  reporter.hpp  stl_container-test.cxx  string-test.cxx
